@@ -1088,6 +1088,7 @@ Nick Seidenman
 Žiga Seilnacht
 Yury Selivanov
 Fred Sells
+Yuriy Senko
 Jiwon Seo
 Iñigo Serna
 Joakim Sernbrant
